too much littles fixs and adds.

--- a/pages/posts/[id]/post.module.sass
+++ b/pages/posts/[id]/post.module.sass
@@ -58,3 +58,7 @@
   min-width: 2rem
   &Count
     margin: .5rem 0
+
+.author
+  display: flex
+  justify-content: flex-end
